--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 <body>
     <header>
-    <input type="text " placeholder="Digite uma raça" id="raca">
-    <button id="pesquisar">Pesquisar</button>
+        <input type="text" placeholder="Digite uma raça" id="raca" list="lista-racas">
+        <datalist id="lista-racas"></datalist>
+        <button id="pesquisar">Pesquisar</button>
     </header>
-   
     <main>
-        <div id ="imagem-container">
-            <img src="" alt="">
-        </div>
+        <div id="imagem-container" class="container"></div>
     </main>
 </body>
 </html>
